remove country variants for es & sv, update the translations

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_es.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_es.properties
@@ -1,93 +1,204 @@
 #X-Generator: crowdin.net
-eo=Esperanto
+# English translation of LanguageTool
+# Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
+
+atd=Automatically detect language
+
+ast=Asturiano
+
 be=Bielorruso
+
 ca=Catal\u00e1n
+
 category_case=May\u00fasculas y min\u00fasculas
+
 category_false_friend=Falsos amigos
+
 category_grammar=Gram\u00e1tica
+
 category_misc=Diversas
+
 category_typo=Posible error tipogr\u00e1fico
+
 checkDone=Revisi\u00f3n completa, {0} posibles problemas encontrados
+
 checkText=&Revisar Texto
+
 correctionMessage=Correcci\u00f3n\:
+
 cs=checo
+
 da=dan\u00e9s
+
 de=alem\u00e1n
+
 desc_comma_whitespace=Espacios en blanco antes de coma y antes/despu\u00e9s de parent\u00e9sis
+
 desc_double_punct=Dos puntos o comas consecutivos
+
 desc_repetition=Repetici\u00f3n de una palabra (p. ej. 'soy soy')
+
 desc_repetition_short=Repetici\u00f3n de una palabra
+
 desc_unpaired_brackets=Par\u00e9ntesis, comillas, signos de exclamaci\u00f3n, interrogaci\u00f3n y similares desparejados
+
 desc_uppercase_sentence=Comprobar si la frase se inicia con una letra may\u00fascula
+
 desc_whitespacerepetition=M\u00faltiples espacios en blanco
+
 double_dots_short=Dos puntos consecutivos
+
 double_commas_short=Dos comas consecutivas
+
 en=ingl\u00e9s
+
 enterText=Escriba o pegue el texto a revisar en el cuadro superior
+
 enterText2=Escriba o pegue el texto a revisar aqu\u00ed
+
+eo=Esperanto
+
 errorContext=Contexto\:
+
 errorMessage=Mensaje\:
+
 es=espa\u00f1ol
+
 false_friend=Falso amigo
+
 false_friend_desc=Nota para falso amigo\:
+
 false_friend_hint=Nota\: "{0}" ({1}) significa {2} ({3}).
+
 false_friend_suggestion=\u00bfQuiere decir {0}?
+
 fr=franc\u00e9s
+
 gl=gallego
+
+guiAddButton=Add...
 guiCancelButton=Cancelar
+
 guiCheckComplete=Se ha completado la revisi\u00f3n de LanguageTool.
+guiCloseButton=Close
+
 guiConfigWindowTitle=LanguageTool - Opciones
+
 guiDemoText=Ese es un un ejemplo del texto que mostra como funcciona LanguageTool. Ese programma no incluieee ninguna revisi\u00f3n ortogr\u00e1fica\!
+guiLanguageManagerDialog=Language Module Manager
+
 guiMatchCount=Posibles errores\:
+
 guiMenuAbout=Acerca de...
+
 guiMenuAddRules=Cargar fichero de reglas
+
 guiMenuCheckClipboard=Revisar el texto del portapapeles
+
 guiMenuFile=Archivo
+
 guiMenuHelp=Ayuda
+
 guiMenuHide=Minimizar a la bandeja del sistema
+
 guiMenuOpen=Abrir...
+
 guiMenuOptions=Opciones...
+
 guiMenuQuit=Terminar
+
 guiMenuShowMainWindow=Abrir ventana principal
+
 guiMotherTongue=Idioma nativo\:
+
 guiNoErrorsFound=No se han encontrado errores ni advertencias (idioma\: {0})
+
 guiNoErrorsFoundSelectedText=No se han encontrado errores ni advertencias en el texto seleccionado (idioma\: {0})
+
 guiOKButton=Aceptar
+
 guiOOoChangeButton=Cambiar
+
 guiOOoCloseButton=Cerrar
+
 guiOOoIgnoreAllButton=Ignorar siempre
+
 guiOOoIgnoreButton=Ignorar
+
 guiOOoOptionsButton=Opciones...
+
 guiProgressWindowTitle=LanguageTool\: Comprobaci\u00f3n del texto...
+
+guiRemoveButton=Remove
 guiReplaceWindowTitle=Sustituir texto
+
 guiReplaceWithOtherText=<otro texto>
+
 guiRunOnPort=Ejecutar como servidor en puerto
+
 guiSelectionCheckComplete=Se ha completado la verificaci\u00f3n del texto seleccionado en LanguageTool.
+
+guiTagText=&Tag Text
+
 incorrect_case=Esa frase no se inicia con may\u00fascula
+
 is=island\u00e9s
+
 it=italiano
+
+km=Khmer
+
 lt=lituano
+
 missing_space_after_comma=Deja un espacio despu\u00e9s de coma
+
 ml=Malayo
+
 nl=holand\u00e9s
+
 no_space_after=No se deja un espacio despu\u00e9s de un par\u00e9ntesis izquierdo
+
 no_space_before=No se deja un espacio antes de un par\u00e9ntesis derecho
+
 no_space_before_dot=No se deja un espacio antes del punto
+
 pl=polaco
+
 repetition=Posible error tipogr\u00e1fico\: repetici\u00f3n de una palabra
-result1=<br><b> {0}. L\u00ednea {1}, Columna {2}</b><br>
+
+result1=<br><b> {0}. Line {1}, column {2}</b><br>
+
 resultAreaText=Los resultados aparecer\u00e1n aqu\u00ed.
-resultTime=<br>Tiempo\: {0}ms (incluye {1}ms para la coincidencia de reglas)<br>
+
+resultTime=<br>Time\: {0}ms (including {1}ms for rule matching)<br>
+
 ru=ruso
+
 sk=eslovaco
+
 sl=esloveno
+
 space_after_comma=Se deja un espacio despu\u00e9s de coma y nunca antes del signo ortogr\u00e1fico.
+
 startChecking=Inicio de verificaci\u00f3n en {0}
+
 sv=sueco
+
+tl=Tagalog
+
 textLanguage=Idioma del texto\:
+
 two_commas=Dos comas consecutivas
+
 two_dots=Dos puntos consecutivos
+
 uk=ucraniano
+
 unpaired_brackets=Se ha encontrado un error en los par\u00e9ntesis, comillas, signos de exclamaci\u00f3n o interrogaci\u00f3n
+
 whitespace_repetition=Posible error tipogr\u00e1fico\: m\u00faltiples espacios en blanco
+
 ro=rumano
+
+zh=Chinese
+
