--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_sv.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_sv.properties
@@ -1,93 +1,204 @@
 #X-Generator: crowdin.net
-eo=Esperanto
-be=Belarusian
-ca=Catalan
-category_case=Stor eller lite bokstav
-category_false_friend=Falska v\u00e4nner
+# English translation of LanguageTool
+# Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
+
+atd=Automatically detect language
+
+ast=Asturian
+
+be=Vitryska
+
+ca=Katalanska
+
+category_case=Stor eller liten bokstav
+
+category_false_friend=Oriktiga v\u00e4nner
+
 category_grammar=Grammatik
+
 category_misc=\u00f6vrigt
+
 category_typo=Eventuellt ett stavfel
+
 checkDone=Kontroll utf\u00f6rd, Hittade {0} potentiella problem
+
 checkText=&Kontrollera Text
+
 correctionMessage=R\u00e4ttelse\:
+
 cs=Tjeckiska
-da=Danish
+
+da=Danska
+
 de=Tyska
+
 desc_comma_whitespace=Anv\u00e4ndande av blanksteg f\u00f6re kommatecken eller f\u00f6re/efter parentes
+
 desc_double_punct=Anv\u00e4ndande av dubbla punkter eller kommatecken
+
 desc_repetition=Repetition av ord (exempelvis 'till till')
+
 desc_repetition_short=Repetition av ord 
+
 desc_unpaired_brackets=Icke ihopparade parenteser, citattecken eller liknande symboler
+
 desc_uppercase_sentence=Kontrollera att meningar b\u00f6rjar med stor bokstav
+
 desc_whitespacerepetition=Upprepade mellanslag (d\u00e5lig formateringsvana)
-double_dots_short=Two consecutive dots
-double_commas_short=Two consecutive comma
+
+double_dots_short=Tv\u00e5 punkter i f\u00f6ljd
+
+double_commas_short=Tv\u00e5 kommatecken i f\u00f6ljd
+
 en=Engelska
+
 enterText=Skriv eller klistra in text i \u00f6vre f\u00e4ltet
+
 enterText2=L\u00e4gg in text f\u00f6r kontroll h\u00e4r
+
+eo=Esperanto
+
 errorContext=Sammanhang\:
+
 errorMessage=Meddelande\:
+
 es=Spanska
-false_friend=False friend
+
+false_friend=Falska v\u00e4nner
+
 false_friend_desc=Hint om falska v\u00e4nner\:
+
 false_friend_hint=Hint\: "{0}" ({1}) betyder {2} ({3}).
+
 false_friend_suggestion=Menade du {0}?
+
 fr=Franska
-gl=Galician
+
+gl=Galiciska
+
+guiAddButton=Add...
 guiCancelButton=Avbryt
+
 guiCheckComplete=LanguageTool kontroll \u00e4r f\u00e4rdig.
+guiCloseButton=Close
+
 guiConfigWindowTitle=LanguageTool Alternativ
+
 guiDemoText=Detta \u00e4r en en exempeltext f\u00f6r att visa hur LanguageTool fungerar.. Notera att den inte inneh\u00e5lle n\u00e5gon stavningskontrol.
+guiLanguageManagerDialog=Language Module Manager
+
 guiMatchCount=M\u00f6jliga fel\:
+
 guiMenuAbout=&Om...
+
 guiMenuAddRules=Ladda in &Regelfil
+
 guiMenuCheckClipboard=&Kontrollera texten i Urklipp
+
 guiMenuFile=&Arkiv
+
 guiMenuHelp=&Hj\u00e4lp
+
 guiMenuHide=&G\u00f6m i systemf\u00e4ltet
+
 guiMenuOpen=&\u00f6ppna...
+
 guiMenuOptions=&Alternativ...
+
 guiMenuQuit=&Avsluta
+
 guiMenuShowMainWindow=\u00f6ppna huvudf\u00f6nster
+
 guiMotherTongue=Ditt modersm\u00e5l\:
+
 guiNoErrorsFound=Hittade inga fel eller varningar (spr\u00e5k\: {0})
+
 guiNoErrorsFoundSelectedText=Hittade inga fel eller varningar i markerad text (spr\u00e5k\: {0})
+
 guiOKButton=&OK
+
 guiOOoChangeButton=&\u00e4ndra
+
 guiOOoCloseButton=St\u00e4ng
+
 guiOOoIgnoreAllButton=Ignorera Alla
+
 guiOOoIgnoreButton=Ignorera
+
 guiOOoOptionsButton=Alternativ...
+
 guiProgressWindowTitle=LanguageTool\: Kontrollerar text...
+
+guiRemoveButton=Remove
 guiReplaceWindowTitle=Ers\u00e4tt text
+
 guiReplaceWithOtherText=<annan text>
+
 guiRunOnPort=K\u00f6r server p\u00e5 po&rt
+
 guiSelectionCheckComplete=LanguageTool kontroll av markerad text \u00e4r utf\u00f6rd.
+
+guiTagText=&Tag Text
+
 incorrect_case=Denna mening b\u00f6rjar med liten bokstav
-is=Icelandic
+
+is=Isl\u00e4ndska
+
 it=Italienska
+
+km=Khmer
+
 lt=Litauiska
+
 missing_space_after_comma=L\u00e4gg till ett blanksteg efter kommatecknet
+
 ml=Malayalam
+
 nl=Holl\u00e4ndska
+
 no_space_after=Ta bort blanksteg efter \u00f6ppnande parentesen
+
 no_space_before=Ta bort blanksteg f\u00f6re avslutande parentesen
-no_space_before_dot=Don't put a space before the full stop
+
+no_space_before_dot=Tryck inte p\u00e5 blanksteg vid slutet
+
 pl=Polska
+
 repetition=M\u00f6jlig felskrivning\: du repeterade ett ord
+
 result1=<br><b> {0}. Rad {1}, kolumn {2}</b><br>
+
 resultAreaText=Resultatet visas h\u00e4r
-resultTime=<br>Tid\: {0}ms (inklusive {1}ms f\u00f6r regelmatching)<br>
+
+resultTime=<br>Tid\: {0}ms (inklusive {1} ms f\u00f6r regelmatchning)<br>
+
 ru=Ryska
+
 sk=Slovakiska
+
 sl=Slovenska
+
 space_after_comma=L\u00e4gg till ett mellanrum efter kommatecknet, men inte f\u00f6re
+
 startChecking=P\u00e5b\u00f6rjar kontroll om {0}
+
 sv=Svenska
+
+tl=Tagalog
+
 textLanguage=Textens spr\u00e5k\:
+
 two_commas=Dubbla kommatecken
+
 two_dots=Dubbla punkter
+
 uk=Ukrainska
+
 unpaired_brackets=Icke ihopparade parenteser eller liknande symboler
+
 whitespace_repetition=M\u00f6jlig felskrivning\: du har gjort upprepade mellanslag.
+
 ro=Rom\u00e2n\u0103
+
+zh=Chinese
+
