[eo] Updated translations in Esperanto.

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_eo.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_eo.properties
@@ -12,6 +12,8 @@
 # Send comments or corrections to: Dominique Pellé <dominique.pelle@gmail.com>
 #
 #
+atd = A\u016dtomate detekti la lingvon 
+
 ast = Asturia
 
 be = Belorusa
@@ -84,14 +86,20 @@ fr = Franca
 
 gl = Galega
 
+guiAddButton = Aldoni...
+
 guiCancelButton = Rezigni
 
 guiCheckComplete = Kontrolado de Lingvoilo fini\u011dis.
+
+guiCloseButton = Malfermi
 
 guiConfigWindowTitle = Opcioj de Lingvoilo
 
 # Errors are on purpose in this demo text.
 guiDemoText = \u0108i tiu ekzemplo estas ekzemplo por por montri kiel funkcias Lingvoilo. Rimarku, tamen, ke \u011di ne inkluzivas literumilon.
+
+guiLanguageManagerDialog = Administrilo de lingvaj moduloj
 
 guiMatchCount = Eblaj eraroj:
 
@@ -135,6 +143,8 @@ guiOOoOptionsButton = Opcioj...
 
 guiProgressWindowTitle = Lingvoilo: kontrolado de teksto...
 
+guiRemoveButton = Forigi
+
 guiReplaceWindowTitle = Anstata\u016digi tekston
 
 guiReplaceWithOtherText = <alia teksto>
@@ -142,6 +152,8 @@ guiReplaceWithOtherText = <alia teksto>
 guiRunOnPort = Lan\u0109i kiel servilo \u0109e por&do
 
 guiSelectionCheckComplete = Kontrolo per Lingvoilo de apartigita teksto fini\u011dis.
+
+guiTagText = E&tikedi tekston
 
 incorrect_case = Tiu frazo ne komenci\u011das per majuskla litero
 
