Languages now initialize their classes (tokenizers, part-of-speech taggers etc.) lazily, i.e. only when the classes are actually needed. Improves startup performance by about 1 second in OOo.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -49,6 +49,9 @@ LanguageTool Change Log
    two-character code.
   -Fixed the bug with the special tag UNKNOWN: now it deals properly with 
    the words at the end of sentence / paragraph.
+  -Languages now initialize their classes (tokenizers, part-of-speech taggers
+   etc.) lazily, i.e. only when the classes are actually needed. Improves
+   startup performance.
 
  
 1.4 (2011-06-26)
