document -adl switch

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -36,7 +36,8 @@ LanguageTool Change Log
   -Fast Rule Evaluation is supported in "dev.index" package. 
 
  -LanguageToolGUI and LanguageTool now have support for automatic language 
-  detection (Michael Bryant)
+  detection (Michael Bryant). On the command-line, you can use -adl or 
+  --autoDetect to enable automatic language detection.
   
  -Internal changes:
    -The disambiguator has a new action "immunize" that protects
