[nl] update rules, thanks to R. J. Baars

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -27,6 +27,8 @@ LanguageTool Change Log
  -Russian:
    -Fix SourceForge bug # 3334498 (False warning about unpaired bracket)
    -Added a few rules
+ -Dutch:
+  -Fixes and updates to rules (R. J. Baars)
  -English:
    -Fixed some of the problems in the Sourceforge bug #3396850. 
 
