[ru] update and improve dictionary

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -27,6 +27,7 @@ LanguageTool Change Log
  -Russian:
    -Fix SourceForge bug # 3334498 (False warning about unpaired bracket)
    -Added a few rules
+   -Updated and improved part-of-speech dictionary.
  -Dutch:
   -Fixes and updates to rules (R. J. Baars)
  -English:
