[nl] dictionary update

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -30,6 +30,7 @@ LanguageTool Change Log
    -Updated and improved part-of-speech dictionary.
  -Dutch:
   -Fixes and updates to rules (R. J. Baars)
+  -Updated the dictionaries
  -English:
    -Fixed some of the problems in the Sourceforge bug #3396850. 
 
