[be] Initial SRX segment rules for Belarusian

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -24,9 +24,13 @@ LanguageTool Change Log
  -Added support for Tagalog (Nathaniel Oco)
  -Ukrainian:
    -Updated translation
+   -Initial SRX sentence tokenization rules
+ -Belarusian
+   -Updated translation
+   -Initial SRX sentence tokenization rules
  -Russian:
    -Fix SourceForge bug # 3334498 (False warning about unpaired bracket)
-   -Added a few rules
+   -Added and updated a few rules
    -Updated and improved part-of-speech dictionary.
  -Dutch:
   -Fixes and updates to rules (R. J. Baars)
