[br] translated a few message in Breton.

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_br.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_br.properties
@@ -4,17 +4,17 @@
 
 atd=Automatically detect language
 
-ast=Asturien
+ast=Astureg
 
-be=Bi\u00e9lorusse
+be=Belaruseg
 
-ca=catalan
+ca=Katalaneg
 
 category_case=Majuscules
 
 category_false_friend=Faux amis
 
-category_grammar=Grammaire
+category_grammar=Yezhadur
 
 category_misc=R\u00e8gles de base
 
@@ -26,11 +26,11 @@ checkText=V\u00e9rifier le texte
 
 correctionMessage=Correction \:
 
-cs=tch\u00e8que
+cs=Tchekeg
 
-da=danois
+da=Daneg
 
-de=allemand
+de=Alamaneg
 
 desc_comma_whitespace=Espace devant \u00ab\u00a0,\u00a0\u00bb, \u00ab\u00a0)\u00a0\u00bb ou apr\u00e8s \u00ab\u00a0(\u00a0\u00bb
 
@@ -50,19 +50,19 @@ double_dots_short=Points cons\u00e9cutifs
 
 double_commas_short=Virgules cons\u00e9cutifs
 
-en=anglais
+en=Saozneg
 
 enterText=Ins\u00e9rez le texte \u00e0 v\u00e9rifier dans l'espace du haut
 
 enterText2=Placez le texte \u00e0 v\u00e9rifier ici
 
-eo=Esp\u00e9ranto
+eo=Esperanteg
 
 errorContext=Contexte \:
 
 errorMessage=Message \:
 
-es=espagnol
+es=Spagnoleg
 
 false_friend=Faux ami
 
@@ -72,9 +72,9 @@ false_friend_hint=Note \: "{0}" ({1}) signifie {2} ({3}).
 
 false_friend_suggestion=Voulez-vous dire {0} ?
 
-fr=fran\u00e7ais
+fr=Galleg
 
-gl=galicien
+gl=Galizeg
 
 guiAddButton=Add...
 guiCancelButton=Annuler
@@ -89,15 +89,15 @@ guiLanguageManagerDialog=Language Module Manager
 
 guiMatchCount=Erreurs possibles \:
 
-guiMenuAbout=\u00c0 propos...
+guiMenuAbout=Diwar-benn...
 
 guiMenuAddRules=Charger un fichier de r\u00e8gles
 
 guiMenuCheckClipboard=V\u00e9rifier le texte dans le presse-papiers
 
-guiMenuFile=Fichier
+guiMenuFile=Restr
 
-guiMenuHelp=Aide
+guiMenuHelp=Skoazell
 
 guiMenuHide=R\u00e9duire dans la barre des t\u00e2ches
 
@@ -115,7 +115,7 @@ guiNoErrorsFound=Ni alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es (language
 
 guiNoErrorsFoundSelectedText=Ni alerte ni erreur n'ont \u00e9t\u00e9 trouv\u00e9es pour le texte s\u00e9lectionn\u00e9 (language\: {0})
 
-guiOKButton=&OK
+guiOKButton=&Mat eo
 
 guiOOoChangeButton=Changer
 
@@ -142,9 +142,9 @@ guiTagText=&Tag Text
 
 incorrect_case=Cette phrase ne commence pas par une majuscule
 
-is=islandais
+is=Islandeg
 
-it=italien
+it=Italianeg
 
 km=khmer
 
@@ -154,7 +154,7 @@ missing_space_after_comma=Cr\u00e9ez une espace apr\u00e8s la virgule
 
 ml=malayalam
 
-nl=n\u00e9erlandais
+nl=Nederlandeg
 
 no_space_after=Ne placez pas d'espace apr\u00e8s une parenth\u00e8se ouvrante
 
@@ -162,7 +162,7 @@ no_space_before=Ne placez pas d'espace avant une parenth\u00e8se fermante
 
 no_space_before_dot=Ne placez pas d'espace avant le point
 
-pl=polonais
+pl=Poloneg
 
 repetition=Faute de frappe possible \: un mot est r\u00e9p\u00e9t\u00e9
 
@@ -172,9 +172,9 @@ resultAreaText=Les r\u00e9sultats se trouveront ici.
 
 resultTime=<br>Dur\u00e9e\: {0}ms (y compris {1}ms les v\u00e9rifier les r\u00e8gles)<br>
 
-ru=russe
+ru=Ruseg
 
-sk=slovaque
+sk=Slovakeg
 
 sl=slov\u00e9nien
 
@@ -182,23 +182,23 @@ space_after_comma=Placer l'espace apr\u00e8s la virgule et non avant
 
 startChecking=Commencement de la v\u00e9rification en {0}
 
-sv=su\u00e9dois
+sv=Svedeg
 
 tl=Tagalog
 
-textLanguage=Langue du texte \:
+textLanguage=Yezh an testenn:
 
 two_commas=Deux virgules cons\u00e9cutives
 
 two_dots=Deux points cons\u00e9cutifs
 
-uk=ukrainien
+uk=Ukraineg
 
 unpaired_brackets=Il manque une parenth\u00e8se fermante ou ouvrante, un guillemet fermant ou ouvrant, etc.
 
 whitespace_repetition=Faute de frappe possible \: vous avez r\u00e9p\u00e9t\u00e9 une espace
 
-ro=roumain
+ro=Roumaneg
 
-zh=Chinese
+zh=Chinezeg
 
