[gl] -Added SRX sentence tokenization rules      -Added some more grammar rules      -Updated word tokenizer

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -38,6 +38,9 @@ LanguageTool Change Log
    -Updated the dictionaries
  -English:
    -Fixed some of the problems in the Sourceforge bug #3396850. 
+ -Galician:
+   -Added SRX sentence tokenization rules
+   -Added and updated a few rules
 
  -Rule development:
    -Fixed testrules.sh to not throw an AssertionFailedError error if called 
