adding key for "Breton"

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_km.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_km.properties
@@ -8,6 +8,8 @@ ast=Asturian
 
 be=\u1794\u17c1\u17a1\u17b6\u179a\u17bb\u179f\u17d2\u179f
 
+br = Breton
+
 ca=\u1780\u17b6\u178f\u17b6\u17a1\u17b6\u1793
 
 category_case=\u178f\u17bd\u17a2\u1780\u17d2\u179f\u179a\u200b\u1792\u17c6
