--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_pl.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_pl.properties
@@ -8,6 +8,8 @@ ast=asturyjski
 
 be=bia\u0142oruski
 
+br = Breton
+
 ca=katalo\u0144ski
 
 category_case=Pisownia ma\u0142\u0105 i wielk\u0105 liter\u0105
