--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_zh.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_zh.properties
@@ -6,6 +6,8 @@ be = \u767d\u4fc4\u7f57\u65af\u8bed
 
 ca = \u52a0\u6cf0\u7f57\u5c3c\u4e9a\u8bed
 
+br = Breton
+
 category_case = \u5927\u5199
 
 category_false_friend = \u5bb9\u6613\u8bd1\u9519\u7684\u8bcd\u8bed
