--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -41,6 +41,7 @@ LanguageTool Change Log
  -Galician:
    -Added SRX sentence tokenization rules
    -Added and updated a few rules
+   -Added more false friends
 
  -Rule development:
    -Fixed testrules.sh to not throw an AssertionFailedError error if called 
