--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_de.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_de.properties
@@ -1,206 +1,204 @@
-#X-Generator: crowdin.net
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd=Automatically detect language
+atd = Sprache automatisch erkennen
 
-ast=Asturian
+ast = Asturisch
 
-be=Wei\u00dfrussisch
+be = Wei\u00dfrussisch
 
-br = Breton
+br = Bretonisch
 
-ca=Katalanisch 
+ca = Katalanisch
 
-category_case=Gro\u00df-/Kleinschreibung
+category_case = Gro\u00df-/Kleinschreibung
 
-category_false_friend=Falsche Freunde
+category_false_friend = Falsche Freunde
 
-category_grammar=Grammatik
+category_grammar = Grammatik
 
-category_misc=Sonstiges
+category_misc = Sonstiges
 
-category_typo=M\u00f6gliche Tippfehler
+category_typo = M\u00f6gliche Tippfehler
 
-checkDone=Pr\u00fcfung beendet, {0} m\u00f6gliche Probleme gefunden
+checkDone = Pr\u00fcfung beendet, {0} m\u00f6gliche Probleme gefunden
 
-checkText=Text &pr\u00fcfen
+checkText = Text &pr\u00fcfen
 
-correctionMessage=Korrektur\:
+correctionMessage = Korrektur\:
 
-cs=Tschechisch
+cs = Tschechisch
 
-da=D\u00e4nisch
+da = D\u00e4nisch
 
-de=Deutsch
+de = Deutsch
 
-desc_comma_whitespace=Leerzeichen vor/hinter Kommas und Klammern
+desc_comma_whitespace = Leerzeichen vor/hinter Kommas und Klammern
 
-desc_double_punct=Zwei aufeinander folgende Kommas oder Punkte
+desc_double_punct = Zwei aufeinander folgende Kommas oder Punkte
 
-desc_repetition=Wortwiederholung (z.B. 'als als')
+desc_repetition = Wortwiederholung (z.B. 'als als')
 
-desc_repetition_short=Wortwiederholung
+desc_repetition_short = Wortwiederholung
 
-desc_unpaired_brackets=Unpaarige Anf\u00fchrungszeichen und Klammern
+desc_unpaired_brackets = Unpaarige Anf\u00fchrungszeichen und Klammern
 
-desc_uppercase_sentence=Gro\u00dfschreibung am Satzanfang
+desc_uppercase_sentence = Gro\u00dfschreibung am Satzanfang
 
-desc_whitespacerepetition=Wiederholung von Leerzeichen
+desc_whitespacerepetition = Wiederholung von Leerzeichen
 
-double_dots_short=Zwei aufeinander folgende Punkte
+double_dots_short = Zwei aufeinander folgende Punkte
 
-double_commas_short=Zwei aufeinander folgende Kommas
+double_commas_short = Zwei aufeinander folgende Kommas
 
-en=Englisch
+en = Englisch
 
-enterText=Bitte Text ins obere Feld eintippen oder hineinkopieren
+enterText = Bitte Text ins obere Feld eintippen oder hineinkopieren
 
-enterText2=Bitte Text hier eintippen oder hineinkopieren
+enterText2 = Bitte Text hier eintippen oder hineinkopieren
 
-eo=Esperanto
+eo = Esperanto
 
-errorContext=Text\:
+errorContext = Text\:
 
-errorMessage=Hinweis\:
+errorMessage = Hinweis\:
 
-es=Spanisch
+es = Spanisch
 
-false_friend=Falscher Freund
+false_friend = Falscher Freund
 
-false_friend_desc=Falscher-Freund-Hinweis f\u00fcr\:
+false_friend_desc = Falscher-Freund-Hinweis f\u00fcr\:
 
-false_friend_hint=Hinweis\: "{0}" ({1}) bedeutet {2} ({3}).
+false_friend_hint = Hinweis\: "{0}" ({1}) bedeutet {2} ({3}).
 
-false_friend_suggestion=Meinten Sie vielleicht {0}?
+false_friend_suggestion = Meinten Sie vielleicht {0}?
 
-fr=Franz\u00f6sisch
+fr = Franz\u00f6sisch
 
-gl=Galicisch
+gl = Galicisch
 
-guiAddButton=Add...
-guiCancelButton=Abbrechen
+guiAddButton=Hinzuf\u00fcgen...
+guiCancelButton = Abbrechen
 
-guiCheckComplete=LanguageTool-Pr\u00fcfung beendet.
-guiCloseButton=Close
+guiCheckComplete = LanguageTool-Pr\u00fcfung beendet.
+guiCloseButton=Schlie\u00dfen
 
-guiConfigWindowTitle=LanguageTool Optionen
+guiConfigWindowTitle = LanguageTool Optionen
 
-guiDemoText=Dies ist ein Beispiel-Text, um zu zu zeigen, wie LanguageTool funktioniert. Wie man sieht, ist keine R\u00e4chtshreibpr\u00fcfung enthalten.
+guiDemoText = Dies ist ein Beispiel-Text, um zu zu zeigen, wie LanguageTool funktioniert. Wie man sieht, ist keine R\u00e4chtshreibpr\u00fcfung enthalten.
 guiLanguageManagerDialog=Language Module Manager
 
-guiMatchCount=M\u00f6gliche Fehler\:
+guiMatchCount = M\u00f6gliche Fehler\:
 
-guiMenuAbout=\u00dcber...
+guiMenuAbout = \u00dcber...
 
-guiMenuAddRules=Regeldatei laden...
+guiMenuAddRules = Regeldatei laden...
 
-guiMenuCheckClipboard=Text in der Zwischenablage pr\u00fcfen
+guiMenuCheckClipboard = Text in der Zwischenablage pr\u00fcfen
 
-guiMenuFile=Datei
+guiMenuFile = Datei
 
-guiMenuHelp=Hilfe
+guiMenuHelp = Hilfe
 
-guiMenuHide=In den System Tray verkleinern
+guiMenuHide = In den System Tray verkleinern
 
-guiMenuOpen=\u00d6ffnen...
+guiMenuOpen = \u00d6ffnen...
 
-guiMenuOptions=Optionen...
+guiMenuOptions = Optionen...
 
-guiMenuQuit=Beenden
+guiMenuQuit = Beenden
 
-guiMenuShowMainWindow=Hauptfenster \u00f6ffnen
+guiMenuShowMainWindow = Hauptfenster \u00f6ffnen
 
-guiMotherTongue=Ihre Muttersprache\:
+guiMotherTongue = Ihre Muttersprache\:
 
-guiNoErrorsFound=Keine Fehler und Warnungen gefunden (Textsprache\: {0})
+guiNoErrorsFound = Keine Fehler und Warnungen gefunden (Textsprache\: {0})
 
-guiNoErrorsFoundSelectedText=Keine Fehler und Warnungen im selektierten Text gefunden (Textsprache\: {0})
+guiNoErrorsFoundSelectedText = Keine Fehler und Warnungen im selektierten Text gefunden (Textsprache\: {0})
 
-guiOKButton=&OK
+guiOKButton = &OK
 
-guiOOoChangeButton=\u00c4ndern
+guiOOoChangeButton = \u00c4ndern
 
-guiOOoCloseButton=Schlie\u00dfen
+guiOOoCloseButton = Schlie\u00dfen
 
-guiOOoIgnoreAllButton=Alle ignorieren
+guiOOoIgnoreAllButton = Alle ignorieren
 
-guiOOoIgnoreButton=Ignorieren
+guiOOoIgnoreButton = Ignorieren
 
-guiOOoOptionsButton=Optionen...
+guiOOoOptionsButton = Optionen...
 
-guiProgressWindowTitle=LanguageTool\: Text pr\u00fcfen...
+guiProgressWindowTitle = LanguageTool\: Text pr\u00fcfen...
 
-guiRemoveButton=Remove
-guiReplaceWindowTitle=Text ersetzen
+guiRemoveButton=Entfernen
+guiReplaceWindowTitle = Text ersetzen
 
-guiReplaceWithOtherText=<anderer Text>
+guiReplaceWithOtherText = <anderer Text>
 
-guiRunOnPort=Als Server laufen auf Po&rt
+guiRunOnPort = Als Server laufen auf Po&rt
 
-guiSelectionCheckComplete=LanguageTool-Pr\u00fcfung des selektierten Textes ist beendet.
+guiSelectionCheckComplete = LanguageTool-Pr\u00fcfung des selektierten Textes ist beendet.
 
-guiTagText=&Tag Text
+guiTagText = &Tag Text
 
-incorrect_case=Dieser Satz f\u00e4ngt nicht mit einem gro\u00df geschriebenen Wort an
+incorrect_case = Dieser Satz f\u00e4ngt nicht mit einem gro\u00df geschriebenen Wort an
 
-is=Isl\u00e4ndisch
+is = Isl\u00e4ndisch
 
-it=Italienisch
+it = Italienisch
 
-km=Khmer
+km = Khmer
 
-lt=Litauisch
+lt = Litauisch
 
-missing_space_after_comma=Hinter einem Komma sollte ein Leerzeichen stehen.
+missing_space_after_comma = Hinter einem Komma sollte ein Leerzeichen stehen.
 
-ml=Malayalam
+ml = Malayalam
 
-nl=Niederl\u00e4ndisch
+nl = Niederl\u00e4ndisch
 
-no_space_after=Hinter einer \u00f6ffnenden Klammer wird kein Leerzeichen eingef\u00fcgt.
+no_space_after = Hinter einer \u00f6ffnenden Klammer wird kein Leerzeichen eingef\u00fcgt.
 
-no_space_before=Vor einer schlie\u00dfeden Klammer wird kein Leerzeichen eingef\u00fcgt.
+no_space_before = Vor einer schlie\u00dfeden Klammer wird kein Leerzeichen eingef\u00fcgt.
 
-no_space_before_dot=Vor dem Punkt sollte kein Leerzeichen stehen
+no_space_before_dot = Vor dem Punkt sollte kein Leerzeichen stehen
 
-pl=Polnisch
+pl = Polnisch
 
-repetition=M\u00f6glicher Tippfehler\: ein Wort wird wiederholt
+repetition = M\u00f6glicher Tippfehler\: ein Wort wird wiederholt
 
-result1=<br><b> {0}. Zeile {1}, Spalte {2}</b><br>
+result1 = <br><b> {0}. Zeile {1}, Spalte {2}</b><br>
 
-resultAreaText=Hier erscheint das Ergebnis der Textpr\u00fcfung
+resultAreaText = Hier erscheint das Ergebnis der Textpr\u00fcfung
 
-resultTime=<br>Zeit\: {0}ms (inklusive {1}ms f\u00fcr Regelpr\u00fcfung)<br>
+resultTime = <br>Zeit\: {0}ms (inklusive {1}ms f\u00fcr Regelpr\u00fcfung)<br>
 
-ru=Russisch
+ru = Russisch
 
-sk=Slowakisch
+sk = Slowakisch
 
-sl=Slowenisch
+sl = Slowenisch
 
-space_after_comma=Nur hinter einem Komma steht ein Leerzeichen, aber nicht davor.
+space_after_comma = Nur hinter einem Komma steht ein Leerzeichen, aber nicht davor.
 
-startChecking=Beginne Pr\u00fcfung in {0}
+startChecking = Beginne Pr\u00fcfung in {0}
 
-sv=Schwedisch
+sv = Schwedisch
 
-tl=Tagalog
+tl = Tagalog
 
-textLanguage=Textsprache\:
+textLanguage = Textsprache\:
 
-two_commas=Zwei aufeinander folgende Kommas.
+two_commas = Zwei aufeinander folgende Kommas.
 
-two_dots=Zwei aufeinander folgende Punkte.
+two_dots = Zwei aufeinander folgende Punkte.
 
-uk=Ukrainisch
+uk = Ukrainisch
 
-unpaired_brackets=Es fehlt eine Klammer usw.
+unpaired_brackets = Es fehlt eine Klammer usw.
 
-whitespace_repetition=M\u00f6glicher Tippfehler\: mehr als ein Leerzeichen hintereinander
+whitespace_repetition = M\u00f6glicher Tippfehler\: mehr als ein Leerzeichen hintereinander
 
-ro=Rum\u00e4nisch
+ro = Rum\u00e4nisch
 
-zh=Chinese
-
+zh = Chinesisch
