[gl] -Updated translation      -Added more lexical entries (SimpleReplaceRule files)      -Added bitext rules (for testing purposes)      -Added and updated grammar rules      -Added a few false friends      -Added one segmentation rule      -Updated entries in the dictionary (now includes enclitics)      -Modified the Galician tagger test to avoid delays testing the dictionary (temporarily)      -Added synthesizer      -Added disambiguator and a few rules

--- a/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_gl.properties
+++ b/trunk/JLanguageTool/src/java/de/danielnaber/languagetool/MessagesBundle_gl.properties
@@ -2,13 +2,13 @@
 # English translation of LanguageTool
 # Copyright (C) 2006 Daniel Naber (http://www.danielnaber.de), Marcin Milkowski
 
-atd=Automatically detect language
+atd=Detecci\u00f3n autom\u00e1tica de idioma
 
 ast=asturiano
 
-be=Bielorruso
+be=bielorruso
 
-br = Breton
+br = bret\u00f3n
 
 ca=catal\u00e1n
 
@@ -78,16 +78,16 @@ fr=franc\u00e9s
 
 gl=galego
 
-guiAddButton=Add...
+guiAddButton=Engadir...
 guiCancelButton=Cancelar
 
 guiCheckComplete=Completouse a correcci\u00f3n de LanguageTool.
-guiCloseButton=Close
+guiCloseButton=Pechar
 
 guiConfigWindowTitle=Opci\u00f3ns de LanguageTool
 
 guiDemoText=Esta vai a ser unha mostra de de exemplo para amosar  o funcionamento de LanguageTool. Por\u00e9n, te\u00f1a en conta que non incl\u00fae un corretor de ortografia.
-guiLanguageManagerDialog=Language Module Manager
+guiLanguageManagerDialog=M\u00f3dulo de xesti\u00f3n de regras
 
 guiMatchCount=Erros potenciais\:
 
@@ -131,7 +131,7 @@ guiOOoOptionsButton=Opci\u00f3ns...
 
 guiProgressWindowTitle=LanguageTool\: Comprobaci\u00f3n do texto...
 
-guiRemoveButton=Remove
+guiRemoveButton=Eliminar
 guiReplaceWindowTitle=Substitu\u00edr o texto
 
 guiReplaceWithOtherText=<outro texto>
@@ -140,7 +140,7 @@ guiRunOnPort=Executar como servidor no por&to
 
 guiSelectionCheckComplete=LanguageTool completou a correcci\u00f3n do texto seleccionado.
 
-guiTagText=&Tag Text
+guiTagText=Etiquetar o texto
 
 incorrect_case=Esta oraci\u00f3n non comeza cunha letra mai\u00fascula
 
@@ -186,7 +186,7 @@ startChecking=Inicio da verificaci\u00f3n en {0}
 
 sv=sueco
 
-tl=Tagalog
+tl=tagalo
 
 textLanguage=Lingua do texto\:
 
@@ -202,5 +202,5 @@ whitespace_repetition=Pos\u00edbel erro tipogr\u00e1fico\: repet\u00edu un espaz
 
 ro=roman\u00e9s
 
-zh=Chinese
+zh=chin\u00e9s
 
