--- a/trunk/JLanguageTool/src/resource/gl/README
+++ b/trunk/JLanguageTool/src/resource/gl/README
@@ -1,6 +1,14 @@
-The dictionary was mainly obtained from the Freeling project.
 
-http://devel.cpl.upc.edu/freeling/svn/latest/freeling/data/gl/dicc.src
-http://garraf.epsevg.upc.es/freeling/
+The Galician dictionary was obtained from two main sources:
 
-It is released under the GNU General Public License.
+    - The Freeling project.
+
+      http://devel.cpl.upc.edu/freeling/svn/latest/freeling/data/gl/dicc.src
+      http://garraf.epsevg.upc.es/freeling/
+
+    - Apertium machine translation engine
+
+Both are released under the GNU General Public License.
+
+http://www.gnu.org/copyleft/gpl.html
+
