--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -40,8 +40,11 @@ LanguageTool Change Log
    -Fixed some of the problems in the Sourceforge bug #3396850. 
  -Galician:
    -Added SRX sentence tokenization rules
-   -Added and updated a few rules
+   -Added new rules
    -Added more false friends
+   -Updated dictionary to support enclitics
+   -Added disambiguation support and rules
+   -Added synthesizer
 
  -Rule development:
    -Fixed testrules.sh to not throw an AssertionFailedError error if called 
